--- a/pages/connect.html
+++ b/pages/connect.html
@@ -32,7 +32,7 @@
       as="style"
     />
   </head>
-  <body>
+  <body class="radious-4 demo-default">
     <header class="header-one header-relative header--sticky">
       <div class="container">
         <div class="row">
@@ -408,28 +408,31 @@
     </div>
 
     <!-- FAQ Section -->
-    <div class="rts-faq-area rts-section-gapBottom bg_light">
-      <div class="container mb--50">
+    <div class="rts-faq-area-start rts-section-gap">
+      <div class="container-faq">
         <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="title rts-text-anime-style-1">
-              Frequently Asked Questions
-            </h2>
+          <div class="col-lg-12">
+            <div class="title-center-wrapper">
+              <span class="pre">FAQ</span>
+              <h2 class="title rts-text-anime-style-1">
+                Frequently Asked Questions
+              </h2>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 offset-lg-2">
-            <div class="accordon-wrapper">
+        <div class="row mt--40">
+          <div class="col-lg-12">
+            <div class="accordon-pricing-wrapper-three full-width">
               <div class="accordion" id="contactFAQ">
                 <div class="accordion-item">
-                  <h2 class="accordion-header">
+                  <h2 class="accordion-header" id="faqHeadingConnect1">
                     <button
                       class="accordion-button"
                       type="button"
                       data-bs-toggle="collapse"
                       data-bs-target="#faq1"
+                      aria-expanded="true"
+                      aria-controls="faq1"
                     >
                       What's your response time for inquiries?
                     </button>
@@ -437,6 +440,7 @@
                   <div
                     id="faq1"
                     class="accordion-collapse collapse show"
+                    aria-labelledby="faqHeadingConnect1"
                     data-bs-parent="#contactFAQ"
                   >
                     <div class="accordion-body">
@@ -446,12 +450,14 @@
                   </div>
                 </div>
                 <div class="accordion-item">
-                  <h2 class="accordion-header">
+                  <h2 class="accordion-header" id="faqHeadingConnect2">
                     <button
                       class="accordion-button collapsed"
                       type="button"
                       data-bs-toggle="collapse"
                       data-bs-target="#faq2"
+                      aria-expanded="false"
+                      aria-controls="faq2"
                     >
                       Do you offer free consultations?
                     </button>
@@ -459,6 +465,7 @@
                   <div
                     id="faq2"
                     class="accordion-collapse collapse"
+                    aria-labelledby="faqHeadingConnect2"
                     data-bs-parent="#contactFAQ"
                   >
                     <div class="accordion-body">
@@ -468,12 +475,14 @@
                   </div>
                 </div>
                 <div class="accordion-item">
-                  <h2 class="accordion-header">
+                  <h2 class="accordion-header" id="faqHeadingConnect3">
                     <button
                       class="accordion-button collapsed"
                       type="button"
                       data-bs-toggle="collapse"
                       data-bs-target="#faq3"
+                      aria-expanded="false"
+                      aria-controls="faq3"
                     >
                       How do I schedule a consultation?
                     </button>
@@ -481,6 +490,7 @@
                   <div
                     id="faq3"
                     class="accordion-collapse collapse"
+                    aria-labelledby="faqHeadingConnect3"
                     data-bs-parent="#contactFAQ"
                   >
                     <div class="accordion-body">
@@ -490,12 +500,14 @@
                   </div>
                 </div>
                 <div class="accordion-item">
-                  <h2 class="accordion-header">
+                  <h2 class="accordion-header" id="faqHeadingConnect4">
                     <button
                       class="accordion-button collapsed"
                       type="button"
                       data-bs-toggle="collapse"
                       data-bs-target="#faq4"
+                      aria-expanded="false"
+                      aria-controls="faq4"
                     >
                       What industries do you serve?
                     </button>
@@ -503,6 +515,7 @@
                   <div
                     id="faq4"
                     class="accordion-collapse collapse"
+                    aria-labelledby="faqHeadingConnect4"
                     data-bs-parent="#contactFAQ"
                   >
                     <div class="accordion-body">
@@ -513,12 +526,14 @@
                   </div>
                 </div>
                 <div class="accordion-item">
-                  <h2 class="accordion-header">
+                  <h2 class="accordion-header" id="faqHeadingConnect5">
                     <button
                       class="accordion-button collapsed"
                       type="button"
                       data-bs-toggle="collapse"
                       data-bs-target="#faq5"
+                      aria-expanded="false"
+                      aria-controls="faq5"
                     >
                       Do you work with remote teams?
                     </button>
@@ -526,6 +541,7 @@
                   <div
                     id="faq5"
                     class="accordion-collapse collapse"
+                    aria-labelledby="faqHeadingConnect5"
                     data-bs-parent="#contactFAQ"
                   >
                     <div class="accordion-body">
@@ -542,8 +558,25 @@
     </div>
 
     <!-- Footer -->
-    <div class="rts-footer-one pt--50 bg_dark">
-      <div class="container pb--80">
+    <div class="rts-footer-one pt--50 bg_dark">    <svg class="network-bg-overlay" viewBox="0 0 1200 600" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice">
+      <defs>
+        <style>
+          .network-line { stroke: rgba(255, 255, 255, 0.15); stroke-width: 1; }
+          .network-node { fill: rgba(100, 200, 255, 0.3); }
+          .network-node-small { fill: rgba(100, 200, 255, 0.2); }
+          .neuron-connection { stroke: rgba(70, 150, 255, 0.2); stroke-width: 1.5; }
+        </style>
+        <radialGradient id="nodeGradient14" cx="40%" cy="40%">
+          <stop offset="0%" style="stop-color:rgba(150, 200, 255, 0.4);stop-opacity:1" />
+          <stop offset="100%" style="stop-color:rgba(70, 150, 255, 0.1);stop-opacity:1" />
+        </radialGradient>
+      </defs>
+      <line x1="100" y1="80" x2="300" y2="150" class="network-line"/><line x1="300" y1="150" x2="500" y2="100" class="network-line"/><line x1="500" y1="100" x2="700" y2="180" class="network-line"/><line x1="700" y1="180" x2="900" y2="120" class="network-line"/><line x1="900" y1="120" x2="1100" y2="200" class="network-line"/><line x1="200" y1="300" x2="400" y2="280" class="network-line"/><line x1="400" y1="280" x2="600" y2="350" class="network-line"/><line x1="600" y1="350" x2="800" y2="320" class="network-line"/><line x1="800" y1="320" x2="1000" y2="380" class="network-line"/><line x1="150" y1="500" x2="350" y2="480" class="network-line"/><line x1="350" y1="480" x2="550" y2="520" class="network-line"/><line x1="550" y1="520" x2="750" y2="500" class="network-line"/><line x1="750" y1="500" x2="950" y2="540" class="network-line"/><line x1="950" y1="540" x2="1100" y2="480" class="network-line"/><line x1="300" y1="150" x2="280" y2="300" class="network-line"/><line x1="500" y1="100" x2="520" y2="280" class="network-line"/><line x1="700" y1="180" x2="720" y2="350" class="network-line"/><line x1="900" y1="120" x2="920" y2="320" class="network-line"/><line x1="100" y1="80" x2="400" y2="280" class="network-line"/><line x1="500" y1="100" x2="800" y2="320" class="network-line"/><line x1="900" y1="120" x2="350" y2="480" class="network-line"/><line x1="600" y1="350" x2="150" y2="500" class="network-line"/><line x1="600" y1="300" x2="400" y2="150" class="neuron-connection"/><line x1="600" y1="300" x2="800" y2="150" class="neuron-connection"/><line x1="600" y1="300" x2="350" y2="480" class="neuron-connection"/><line x1="600" y1="300" x2="850" y2="500" class="neuron-connection"/>
+      <circle cx="100" cy="80" r="4" class="network-node" fill="url(#nodeGradient14)"/><circle cx="500" cy="100" r="4" class="network-node" fill="url(#nodeGradient14)"/><circle cx="900" cy="120" r="4" class="network-node" fill="url(#nodeGradient14)"/><circle cx="150" cy="500" r="4" class="network-node" fill="url(#nodeGradient14)"/><circle cx="950" cy="540" r="4" class="network-node" fill="url(#nodeGradient14)"/><circle cx="600" cy="300" r="6" class="network-node" fill="url(#nodeGradient14)"/>
+      <circle cx="300" cy="150" r="3" class="network-node-small"/><circle cx="700" cy="180" r="3" class="network-node-small"/><circle cx="400" cy="280" r="3" class="network-node-small"/><circle cx="800" cy="320" r="3" class="network-node-small"/><circle cx="350" cy="480" r="3" class="network-node-small"/><circle cx="850" cy="500" r="3" class="network-node-small"/><circle cx="200" cy="300" r="3" class="network-node-small"/><circle cx="1000" cy="380" r="3" class="network-node-small"/><circle cx="1100" cy="200" r="3" class="network-node-small"/><circle cx="1100" cy="480" r="3" class="network-node-small"/>
+      <circle cx="250" cy="200" r="2" class="network-node-small"/><circle cx="550" cy="150" r="2" class="network-node-small"/><circle cx="750" cy="250" r="2" class="network-node-small"/><circle cx="450" cy="400" r="2" class="network-node-small"/><circle cx="650" cy="420" r="2" class="network-node-small"/><circle cx="500" cy="520" r="2" class="network-node-small"/><circle cx="1050" cy="350" r="2" class="network-node-small"/>
+      <line x1="250" y1="200" x2="300" y2="150" class="network-line"/><line x1="550" y1="150" x2="500" y2="100" class="network-line"/><line x1="750" y1="250" x2="700" y2="180" class="network-line"/><line x1="450" y1="400" x2="400" y2="280" class="network-line"/><line x1="650" y1="420" x2="600" y2="300" class="network-line"/>
+    </svg>      <div class="container pb--80">
         <div class="row">
           <div class="col-lg-3">
             <div class="left-wiget">
@@ -567,6 +600,11 @@
                     ><i class="fa-brands fa-twitter"></i
                   ></a>
                 </li>
+                <li>
+                  <a href="#" aria-label="YouTube"
+                    ><i class="fa-brands fa-youtube"></i
+                  ></a>
+                </li>
               </ul>
             </div>
           </div>
@@ -575,7 +613,7 @@
               <div class="single">
                 <h6 class="title">Company</h6>
                 <ul>
-                  <li><a href="about.html">About</a></li>
+                  <li><a href="about.html">About Us</a></li>
                   <li><a href="life-at-sos.html">Life at SOS</a></li>
                   <li><a href="impact.html">Case Studies</a></li>
                   <li><a href="connect.html">Contact</a></li>
@@ -591,6 +629,23 @@
                   <li><a href="data-bi-analytics.html">Data, BI & Analytics</a></li>
                   <li><a href="new-age-technologies.html">New-Age Technologies</a></li>
                   <li><a href="software-engineering.html">Software Engineering</a></li>
+                </ul>
+              </div>
+              <div class="single">
+                <h6 class="title">Follow Us</h6>
+                <ul>
+                  <li>
+                    <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+                  </li>
+                  <li>
+                    <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+                  </li>
+                  <li>
+                    <a href="https://www.twitter.com/" target="_blank">Twitter</a>
+                  </li>
+                  <li>
+                    <a href="https://www.youtube.com/" target="_blank">YouTube</a>
+                  </li>
                 </ul>
               </div>
             </div>
